// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: match > match { x: 1 } | { x: a } -> a 1`] = `
{
  "displays": {
    "constraints": [
      "1 ~~ ?2",
      "Num ~~ ?3",
      "Schema [ x: ?5 ] ~~ Schema [ x: Num ]",
      "?5 ~~ ?5",
      "?5 ~~ ?7",
    ],
    "term": "match Struct [ x: 1 ]
| Struct [ x: a ] -> a",
    "type": "?7",
  },
}
`;

exports[`inference: match > match { x: 1 } | { x: a } -> a 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 33,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "lvl": 0,
        "right": {
          "id": 29,
          "type": "Neutral",
          "value": {
            "id": 28,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 32,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 31,
          "type": "Neutral",
          "value": {
            "id": 30,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 44,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 42,
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 40,
                  "type": "Neutral",
                  "value": {
                    "id": 39,
                    "type": "Var",
                    "variable": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 5,
                    },
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 41,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 43,
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "id": 37,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 35,
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 32,
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 34,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 36,
            "type": "App",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 40,
          "type": "Neutral",
          "value": {
            "id": 39,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "lvl": 0,
        "right": {
          "id": 40,
          "type": "Neutral",
          "value": {
            "id": 39,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 40,
          "type": "Neutral",
          "value": {
            "id": 39,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "lvl": 0,
        "right": {
          "id": 48,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 7,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 38,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "id": 47,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 6,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [
            [
              "a",
              {
                "id": 40,
                "type": "Neutral",
                "value": {
                  "id": 39,
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 5,
                  },
                },
              },
            ],
          ],
          "pattern": {
            "row": {
              "label": "x",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Binder",
                "value": "a",
              },
            },
            "type": "Struct",
          },
          "term": {
            "id": 1210,
            "type": "Var",
            "variable": {
              "index": 0,
              "type": "Bound",
            },
          },
        },
      ],
      "id": 1211,
      "scrutinee": {
        "arg": {
          "id": 1207,
          "row": {
            "label": "x",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "id": 1205,
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 1206,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "id": 1208,
        "type": "App",
      },
      "type": "Match",
    },
    "type": {
      "id": 48,
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 7,
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "match 1
| 1 -> 2",
    "type": "?2",
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 27,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 26,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 30,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 29,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [],
          "pattern": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
          "term": {
            "id": 1205,
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 2,
            },
          },
        },
      ],
      "id": 1206,
      "scrutinee": {
        "id": 1204,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Match",
    },
    "type": {
      "id": 30,
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 2,
      },
    },
    "typedTerms": {},
  },
}
`;
